4_route_deply.yaml
apiVersion: v1
kind : Service
metadata:
  name: blog-clusterip-srv
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: blog-from-image
  type: ClusterIP
  sessionAffinity: None
    
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  namespace: fiap-aso6-grupo07
spec:
  path: /
  to:
    kind: Service
    name: blog-clusterip-srv
    weight: 100
  port:
    targetPort: 8080-tcp
    wildcardPolicy: None
